# cak

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODEX_PUBLISH_PROMPT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: rust.yml  validate-docs.yml
.heurema/rdlab/: README.md  rdlab.toml  sources.toml  topics.toml
crates/cak-host-adapter/: Cargo.toml
crates/cak-host-adapter/src/: lib.rs
crates/cak-host-adapter/tests/: adapter.rs
crates/cak-runtime-cli/: Cargo.toml
crates/cak-runtime-cli/src/: main.rs
crates/cak-runtime-cli/tests/: cli.rs
crates/cak-runtime-core/: Cargo.toml
crates/cak-runtime-core/src/: composite.rs  decision.rs  evaluator.rs  lib.rs  lifecycle_gate.rs  proof.rs  proof_gate.rs  provenance.rs  rdr_review.rs  request.rs  skill_graph.rs  stage.rs  stage_gate.rs
crates/cak-runtime-core/tests/: composite.rs  evaluators.rs  fixtures.rs  serde_roundtrip.rs
docs/: 00_project_thesis.md  01_pain_map.md  02_full_solution_architecture.md  03_core_primitives.md  04_cak_ir_core.md  05_agent_vm_runtime.md  06_artifact_lifecycle.md  07_security_governance.md  08_provider_cost_portability.md  09_evaluation_benchmarks.md  10_roadmap.md  11_decision_log.md  12_glossary.md  13_v0_1_wedge_and_non_goals.md  14_grounding_enforcement_replay.md  15_authoring_economics.md  16_cak_failure_modes.md  17_gateway_competitive_landscape.md  18_v0_1_approval_flow.md  19_v0_1_compensation.md  20_contract_type_system_skills.md  20_v0_1_cel_policies.md  22_cak_runtime_v0.md  23_cak_skill_authoring_v0.md
docs/rd/: 00_rd_charter.md  01_research_questions.md  02_literature_anchors.md  03_skill_architecture_synthesis.md  README.md  debate_protocol.md  pattern_references.md  rdr_template.md  research_quality_gate.md  research_run_protocol.md  source_ledger_template.yaml
docs/rd/runs/: README.md
evidence/: README.md  p0_pain_sources.md
examples/: invoice_agent.cak.yaml  policy_pack.yaml  provider_profile.yaml  task_capsule.yaml
examples/v0_1/: cel_policies_example.json  demo.py  gateway_config.json  live_agent_trace.jsonl  live_agent_trace.md  mcp_config_example.json  mock_crm_server.py
examples/v0_2/: contract_specs.yaml
experiments/predicate-language/: README.md  cel_policies.json  results.json  run_comparison.py  scenarios.json
experiments/predicate-language/cedar/: block.cedar  require_approval.cedar  schema.cedarschema  warn.cedar
experiments/predicate-language/rego/: policies.rego
runtime-fixtures/: README.md
runtime-fixtures/misc/: unrelated_readme_edit_allowed.expected.json  unrelated_readme_edit_allowed.request.json
runtime-fixtures/proof/: failed_verifier_text_overclaim.expected.json  failed_verifier_text_overclaim.request.json  verified_claim_without_grounding.expected.json  verified_claim_without_grounding.request.json
runtime-fixtures/rdr-review/: candidate_traces_overclaim.expected.json  candidate_traces_overclaim.request.json  hypothesis_overclaim.expected.json  hypothesis_overclaim.request.json  missing_trace_status_blocked.expected.json  missing_trace_status_blocked.request.json  non_rdr_mark_ready_allowed.expected.json  non_rdr_mark_ready_allowed.request.json  not_ready_merge.expected.json  not_ready_merge.request.json  pending_trace_status_blocked.expected.json  pending_trace_status_blocked.request.json
runtime-fixtures/skill-graph/: draft_skill_authoritative_activation.expected.json  draft_skill_authoritative_activation.request.json  quarantined_skill_activation.expected.json  quarantined_skill_activation.request.json  quarantined_skill_authority_claim.expected.json  quarantined_skill_authority_claim.request.json  stable_skill_update_without_rollback.expected.json  stable_skill_update_without_rollback.request.json
runtime-fixtures/stage/: mark_ready_preconditions_missing.expected.json  mark_ready_preconditions_missing.request.json  stage_mismatch_linear_workflow.expected.json  stage_mismatch_linear_workflow.request.json
schemas/: cak_ir.schema.json  contract_spec.schema.json  effect_spec.schema.json  policy_spec.schema.json  skill_spec.schema.json  task_capsule.schema.json
scripts/: check_docs.py
skills/cak-host-adapter/: SKILL.md
skills/cak-rdr-review/: SKILL.md  cak.yaml
src/cak/: __init__.py  approvals.py  approve.py  cel.py  contracts.py  gateway.py  mcp_stdio.py  predicates.py  replay.py  specs.py  trace.py  types.py  verifier.py
tests/: test_approvals.py  test_cak_host_adapter_skill.py  test_cel.py  test_compensation.py  test_contracts.py  test_gateway_e2e.py  test_predicates.py  test_trace_replay.py  test_verifier.py
(+68 files in other folders)
