[project]
name = "cak"
version = "0.1.0"
description = "CAK v0.1 — typed tool-boundary governance gateway (MCP proxy form factor)"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
strict = true
warn_unreachable = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]
