[package]
name = "cak-runtime-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "cak: public CLI over the CAK Runtime v0 core. Reads EvalRequest and host proposal JSON files."

[lints]
workspace = true

[[bin]]
name = "cak"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
cak-runtime-core = { workspace = true }
cak-host-adapter = { workspace = true }
