[package]
name = "cak-runtime-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CAK Runtime v0 core: host-neutral EvalRequest -> Decision engine. No I/O, no network, no subprocesses."

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
